--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;  
-/*   background: linear-gradient(to bottom, #100612, #3b1644, #3b1644, #100612);  */
   background: url("../img/body-bg.jpg") no-repeat center top;
   background-size: cover;
 }
@@ -53,6 +52,7 @@ body {
 
 }
 .wrapper {
+  margin-bottom: 70px;
   background: rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 60px 5px #000;
   padding: 0 100px;
@@ -116,4 +116,22 @@ body {
 .event__text {
   margin: 0;
   padding: 37px 0;
+}
+.event__link {
+  display: inline-block;
+  vertical-align: top;
+  color: #fff;
+  font-size: 14px;
+  line-height: 21px;
+  padding: 22px 50px;
+  text-decoration: none;
+  border-radius: 50px;
+  background: linear-gradient(to bottom, #ab25d4, #741497);
+  box-shadow: 0 0 60px 5px #000;
+  
+}
+.event__link:hover {
+  background: linear-gradient(to top, #ab25d4, #741497);
+  text-shadow: 1px 1px 5px #000;
+    box-shadow: 0 0 60px 10px #000;
 }
