--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;  
-  background: url("../img/body-bg.jpg") no-repeat center top;
+  background: #270e2a url("../img/body-bg.jpg") no-repeat center top;
   background-size: cover;
 }
 .event {
